Fix spacing a bit compared to solution - mildly off, acceptable

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -1,4 +1,7 @@
-
+* {
+  border: solid;
+  gap: 8px
+}
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
@@ -15,7 +18,7 @@ body {
   font-weight: 900;
   display: flex;
   align-items: center;
-  padding: 16px;
+  padding: 8px;
 }
 
 .footer {
